# bridge-sim

./: .dockerignore  .gitignore  Containerfile  Makefile  README.md  deployment.yaml  pyproject.toml
.github/workflows/: build-container.yml
bridgesim/: config.py  generator.py  main.py
bridgesim/trusscalc/: __init__.py  proplot_style.mplstyle  truss.py
