[tool.poetry]
name = "bridge-sim"
version = "0.0.1"
description = "Truss Bridge Simulator"
authors = ["Atticus Martin-King Tan <atticus@irrationalidiom.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
# cvxpy==1.3.0
# matplotlib==3.6.3
# numpy==1.23.2
# opencv_contrib_python==4.7.0.68
# scipy==1.9.3
# Shapely==2.0.1
# sigfig==1.2.0
numpy = "^2.0.0"
matplotlib = "^3.9.1"
sigfig = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
